# yy-typings

./: .gitignore  Cargo.toml  README.md  TODO.md  output.json  output.txt  test.json
benches/: speed.rs
data/formatting/: Anchor.yy  floater.yy  game.yy  obj_sound_emitter.yy  par_modifiable_building.yy  resources.json  sprite_one.yy  sprite_zero.yy  yyp.yyp
data/full_project/: full_project.yyp
data/object_examples/: obj_leafpile.yy  obj_light.yy  weather.yy
data/objects/: game.yy  obj_animate_then_die.yy  obj_assetlayerconverter.yy  obj_celine.yy  obj_dell.yy  obj_door.yy  obj_dragonshrine.yy  obj_egg.yy  obj_gmlive.yy  obj_item.yy  obj_juniper.yy  obj_log.yy  obj_map_node.yy  obj_monster_mite_secondary.yy  obj_noticeboard.yy  obj_transition.yy  par_NPC.yy  par_staticobject.yy
data/rooms/: rm_farm.yy  rm_inn.yy  rm_mines_upper_elevator10.yy  rm_test.yy  rm_town.yy
data/scripts/: Camera.yy  CameraClass.yy  Input.yy  InputClasses.yy  List.yy  MathUtil.yy  create_object_grid.yy  draw_player.yy  ds_list_add_to_map.yy  ds_list_to_array.yy  grid.yy  hex.yy  information_utilities.yy  json_load.yy  log.yy  script_execute_alt.yy
data/shaders/: sh_draw_light_to_screen.yy  sh_draw_output_to_app_surface.yy  sh_draw_screen_to_output.yy  shd_anchor_outline.yy  shd_anchor_shadow.yy  shd_anchor_text.yy  shd_animal_lut.yy  shd_day_night.yy  shd_extrude_edges.yy  shd_flat.yy  shd_fogalpha.yy  shd_grass.yy  shd_highlight_interact.yy  shd_inline.yy  shd_lightingcap.yy  shd_nightandday_v2.yy  shd_outline_parse.yy  shd_overlay.yy  shd_paletteswap.yy  shd_shadows.yy
data/sprite_examples/: test0.yy
data/sprites/: spr_animal_alpaca_basic_base_idle_north.yy  spr_animal_chicken_beach_shadow_idle_north.yy  spr_animal_chicken_gift_giving_male_idle_south.yy  spr_bathhouse_juniper_bed_spring.yy  spr_crop_beet_stage4.yy  spr_decor_starter_stone_path_summer_1.yy  spr_easternroad_marsh_grass_small_c1_summer.yy  spr_forage_crystal_berries_shadow.yy  spr_fruit_apple_stump.yy  spr_furniture_beach_towel_yellow_spring_east.yy  spr_npc_landen_winter_idle_north.yy  test3.yy
src/: audio_group.rs  formatter.rs  lib.rs  note.rs  object.rs  paths.rs  reference_typings.ts  resource_data.rs  resource_version.rs  room.rs  script.rs  shader.rs  sound.rs  sprite.rs  texture_group.rs  tileset.rs  unidentified_resource.rs  utils.rs  yy_boss.rs  yy_resource.rs  yyp.rs  yyp_serialization.rs
tests/: folder_parsing.rs  options_parsing.rs  sprite_parsing.rs  test_output.txt  test_yyp_boss.rs  utilities.rs  yyp_boss.rs  yyp_parsing.rs
(+407 files in other folders)
