[package]
name = "yy-typings"
version = "0.5.1"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A collection of typings for GameMaker Studio 2 YY and YYP files"
repository = "https://github.com/NPC-Studio/yy-typings"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "1.4"

uuid = { version = "0.8", features = ["serde", "v4"] }

regex = "1.3"
smart-default = "0.6"
num-traits = "0.2"
num-derive = "0.3"

[dev-dependencies]
pretty_assertions = "1.1"
include_dir = { version = "0.7.2", features = ["glob"]}
serde_json = "1.0"
bincode = "1.3"
maplit = "1"
