[package]
name = "yy-typings"
version = "0.7.7"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A collection of typings for GameMaker Studio 2 YY and YYP files"
repository = "https://github.com/NPC-Studio/yy-typings"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_with = "1.4"

uuid = { version = "0.8", features = ["serde", "v4"] }

regex = "1.3"
smart-default = "0.6"
thiserror = "1.0.49"
heck = "0.4.1"
num-traits = "0.2.19"
num-derive = "0.4.2"

[dev-dependencies]
pretty_assertions = "1.1"
include_dir = { version = "0.7.2", features = ["glob"] }
bincode = "1.3"
maplit = "1"
criterion = "0.3"

[[bench]]
name = "speed"
harness = false
